// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<a
  class=" inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-secondary-gray material-symbols-outlined size-48 flex size-[72px] select-none items-center justify-center self-center rounded-full bg-[#f5f5f5]"
  >
    target
  </span>
  <span
    class="text-button-sm text-primary-gray"
  >
    Default
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<a
  class=" inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-secondary-gray material-symbols-outlined size-48 flex size-[72px] select-none items-center justify-center self-center rounded-full bg-[#f5f5f5]"
  >
    target
  </span>
  <span
    class="text-button-sm text-primary-gray"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<a
  class=" inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 flex size-[72px] select-none items-center justify-center self-center rounded-full bg-[#697077]"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<a
  class=" inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 flex size-[72px] select-none items-center justify-center self-center rounded-full bg-[#697077]"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > selected 1`] = `
<a
  class=" inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 flex size-[72px] select-none items-center justify-center self-center rounded-full bg-[#697077]"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent"
  >
    Selected
  </span>
</a>
`;
